# project_template_cpp

./: CMakeLists.txt  readme.md  releasenotes.md
app/: app0_main.cpp
